<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.digitalstethoscope.activities.TestCanvasActivity" >

	<Button
        android:id="@+id/OpenWavButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClickOpenWav"
        android:text="@string/OpenWavFile"
        />

	<Button
	    android:id="@+id/CalcFFTButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:onClick="onClick"
	    android:text="@string/CalcFFT" />
	
	<Button
	    android:id="@+id/PlotWavButton"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:onClick="onClick"
	    android:text="@string/PlotWav" />
	
	<com.example.digitalstethoscope.animation.animationwiththread.AnimView
        android:id="@+id/animview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />
	
	<TextView
        android:id="@+id/TestCanvasView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />
	
</LinearLayout>
